refactor(code): implement the invoice edition with solidjs

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#c4f2c3" />
     <meta name="keywords" content="invoicing,client-side storage">
     <meta name="author" content="ndimah tchougoua">
+    <meta name="color-scheme" content="light dark">
     <link rel="shortcut icon" href="/src/assets/icon.ico" />
     <title>Solid App</title>
   </head>
