fix(components): solve the issue with drawer items on new invoice

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="ndimah tchougoua">
     <meta name="color-scheme" content="light dark">
     <link rel="shortcut icon" href="/src/assets/icon.ico" />
-    <title>Solid App</title>
+    <title>Invoice App</title>
   </head>
   <body>
     <noscript class="box row icon-start" data-status="pending" data-icon="warning">
